<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="weather_image_description">Downloaded weather description</string>
    <string name="title_activity_detailed_weather">DetailedWeatherActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sunrise_time">Sunrise time:</string>
    <string name="sunset_time">Sunset time:</string>
    <string name="wind">Wind:</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="imperial">imperial</string>
    <string name="metric">metric</string>
    <string name="miles_per_hour">m/h</string>
    <string name="meters_per_second">m/s</string>
    <string name="location_icon">location icon</string>
    <string name="location_name">%1$s</string>
    <string name="menu_changeLocation">Change location</string>s
    <string name="menu_settings">Change units</string>
    <string name="menu_about">About this App</string>
    <string name="location_change">Select new location</string>
    <string name="cancel">Cancel</string>
    <string name="settingsSelectUnitsTitle">Select units:</string>
    <string name="ok">OK</string>
    <string name="location_unavailable">Please, refresh the app</string>
    <string name="enterLocation">Enter city or zip code:</string>
    <string name="enterLocationHint"><![CDATA[city or zip]]></string>
    <string name="about_email">Email: kolobovairinav@gmail.com</string>
    <string name="developer">Developer: <a href="http://www.linkedin.com/in/irina-kolobova">Irina Kolobova</a></string>
    <string name="linkedin_web_url">LinkedIn: </string>
    <string name="icons_credits">Icons designed by <a href="http://www.freepik.com">Freepik</a></string>
    <string name="forecast_credits">Forecast info provided by <a href="https://openweathermap.org/api">OpenWeather</a></string>
    <string name="temp_unit">temperature unit</string>

</resources>