<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="?attr/dialogPreferredPadding">

    <TextView
        android:id="@+id/selectUnitsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="35"
        android:text="@string/settingsSelectUnitsTitle"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- https://stackoverflow.com/questions/52064205/how-to-set-width-and-track-text-in-a-switch-switchcompat-button-and-achieve-this/52075815 -->


    <Switch
        android:id="@+id/switch_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:showText="true"
        android:textOff="@string/imperial"
        android:textOn="@string/metric"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectUnitsTitle" />

    <Button
        android:id="@+id/settings_cancelButton"
        style="?attr/buttonBarNegativeButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/settings_okButton"
        app:layout_constraintTop_toBottomOf="@+id/switch_units" />

    <Button
        android:id="@+id/settings_okButton"
        style="?attr/buttonBarPositiveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintBaseline_toBaselineOf="@+id/settings_cancelButton"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>