<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ivk.weatherapp.MainActivity">

    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="1"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <!-- android:icon="@drawable/ic_settings_white_24dp" -->

    <item
        android:id="@+id/menu_changeLocation"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="2"
        android:title="@string/menu_changeLocation"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="3"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>