<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="?attr/dialogPreferredPadding"
    android:background="@drawable/list_item_selected">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="35"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:linksClickable="true"
        android:text="@string/developer"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/appName"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <TextView
        android:id="@+id/developer_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="email"
        android:text="@string/about_email"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/developer"
        app:layout_constraintTop_toBottomOf="@+id/developer" />

    <TextView
        android:id="@+id/icons_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:linksClickable="true"
        android:text="@string/icons_credits"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/developer_email"
        app:layout_constraintTop_toBottomOf="@+id/developer_email" />

    <Button
        android:id="@+id/about_okButton"
        style="?attr/buttonBarNegativeButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icons_credits" />


</androidx.constraintlayout.widget.ConstraintLayout>