<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_selected">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintEnd_toStartOf="@+id/thumbnail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Date" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@+id/date"
            tools:text="Current Temperature" />


        <ImageView
            android:id="@+id/temp_unit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/temp_unit"
            app:layout_constraintStart_toEndOf="@+id/temperature"
            app:layout_constraintTop_toBottomOf="@+id/date"
            app:srcCompat="@drawable/ic_na"
            />

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/weather_image_description"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandableView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="@+id/temperature"
            app:layout_constraintTop_toBottomOf="@+id/temperature">


            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Weather description" />

            <TextView
                android:id="@+id/wind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/wind"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:id="@+id/wind_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintBaseline_toBaselineOf="@+id/wind"
                app:layout_constraintStart_toEndOf="@+id/wind"
                tools:text="wind data" />

            <TextView
                android:id="@+id/speed_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/miles_per_hour"
                app:layout_constraintBaseline_toBaselineOf="@+id/wind_data"
                app:layout_constraintStart_toEndOf="@+id/wind_data" />

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sunrise_time"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="@+id/wind"
                app:layout_constraintTop_toBottomOf="@+id/wind" />

            <TextView
                android:id="@+id/sunrise_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/sunrise"
                app:layout_constraintStart_toEndOf="@+id/sunrise"
                tools:text="sunrise data" />

            <TextView
                android:id="@+id/sunset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sunset_time"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="@+id/sunrise"
                app:layout_constraintTop_toBottomOf="@+id/sunrise" />

            <TextView
                android:id="@+id/sunset_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/sunset"
                app:layout_constraintStart_toEndOf="@+id/sunset"
                tools:text="sunset data" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
