<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detailed_weather">


    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Weather description" />

    <TextView
        android:id="@+id/wind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wind"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/wind_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBaseline_toBaselineOf="@+id/wind"
        app:layout_constraintStart_toEndOf="@+id/wind"
        tools:text="wind data" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sunrise_time"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@+id/wind"
        app:layout_constraintTop_toBottomOf="@+id/wind" />

    <TextView
        android:id="@+id/sunrise_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/sunrise"
        app:layout_constraintStart_toEndOf="@+id/sunrise"
        tools:text="sunrise data" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sunset_time"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@+id/sunrise"
        app:layout_constraintTop_toBottomOf="@+id/sunrise" />

    <TextView
        android:id="@+id/sunset_data"
        android:layout_width="78dp"
        android:layout_height="18dp"

        app:layout_constraintBaseline_toBaselineOf="@+id/sunset"
        app:layout_constraintStart_toEndOf="@+id/sunset"
        tools:text="sunset data" />

</androidx.constraintlayout.widget.ConstraintLayout>